--- a/src/main/webapp/resources/style.css
+++ b/src/main/webapp/resources/style.css
@@ -108,9 +108,10 @@ body {
 }
 
 .main {
-    height: 500px;
-    margin: 0 -10px;
+    min-height: 500px; 
+    margin: 50px -10px 0 -10px;
     background-color: white;
+    height: auto;
 }
 .content {
     padding: 0 270px;
@@ -154,4 +155,52 @@ body {
 .menu ul .on {
 	color: red;
 	border-bottom: solid 3px red;
+}
+.content_list{
+	overflow: hidden;
+}
+.content_list li {
+	list-style-type: none;
+	float: left;
+	width: 25%;
+	margin-bottom: 8px;
+	min-height: 300px;
+/* 	position: relative; */
+} 
+.content_list li .img {
+	max-width: 220px;
+	height:144px;
+	margin: 0 auto;
+	overflow: hidden;
+} 
+.content_list li .cont {
+	min-height: 50px;
+	padding:30px 5px 0;
+	text-align: center;
+	font-size: 20px;
+	font-weight:bold;
+}
+.content_list li .button {
+	margin-top: 20px;
+	text-align: center;
+	display: flex;
+	justify-content: space-evenly;
+}
+.content_list li .modi {
+	text-decoration: none;	
+	color:black;
+}
+.content_list li .delete {
+	text-decoration: none;	
+	color:black;
+}
+.content_list li .img img{
+	max-width: 100%;
+	max-height: 100%;
+}
+.list {
+	margin-top: 50px;
+}
+.content label {
+	font-size: 20px;
 }
